--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.21.0",
+        "passport-local": "^1.0.0",
         "pg": "^8.13.0"
     }
 }
