--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.21.0",
+        "helmet": "^8.0.0",
         "passport-local": "^1.0.0",
         "pg": "^8.13.0"
     }
